--- a/app.yaml
+++ b/app.yaml
@@ -8,8 +8,9 @@ handlers:
   - url: /favicon.ico
     static_files: images/favicons/favicon.ico
     upload: images/favicons/favicon.ico
-  - url: /lp-1
-    static_dir: lp-1
+  - url: /lp-1/(.*)
+    static_files: lp-1/\1
+    upload: lp-1/.*
   - url: /.*
     static_files: index.html
     upload: index.html
