--- a/app.yaml
+++ b/app.yaml
@@ -8,9 +8,14 @@ handlers:
   - url: /favicon.ico
     static_files: images/favicons/favicon.ico
     upload: images/favicons/favicon.ico
+  - url: /lp-1
+    static_files: lp-1/index.html
+    upload: lp-1/index.html
   - url: /lp-1/(.*)
     static_files: lp-1/\1
     upload: lp-1/.*
   - url: /.*
     static_files: index.html
     upload: index.html
+  - url: .*
+    script: auto
