--- a/app.yaml
+++ b/app.yaml
@@ -11,6 +11,7 @@ handlers:
   - url: /lp-1
     static_files: lp-1/index.html
     upload: lp-1/index.html
+    require_matching_file: true
   - url: /lp-1/(.*)
     static_files: lp-1/\1
     upload: lp-1/.*
