--- a/app.yaml
+++ b/app.yaml
@@ -8,14 +8,22 @@ handlers:
   - url: /favicon.ico
     static_files: images/favicons/favicon.ico
     upload: images/favicons/favicon.ico
-  - url: /lp-1
+  - url: /lp-1/assets/css
+    static_dir: lp-1/assets/css
+  - url: /lp-1/assets/img
+    static_dir: lp-1/assets/img
+  - url: /lp-1/assets/js
+    static_dir: lp-1/assets/js
+  - url: /lp-1/assets/scss
+    static_dir: lp-1/assets/scss
+  - url: /lp-1/(.*)
     static_files: lp-1/index.html
     upload: lp-1/index.html
-  - url: /lp-1/(.*)
-    static_files: lp-1/\1
-    upload: lp-1/.*
+  - url: /(.*)/
+    static_files: \1/index.html
+    upload: \1/index.html
   - url: /.*
     static_files: index.html
     upload: index.html
-  - url: .*
+  - url: /.*
     script: auto
