app.yamlを編集 lp-1にリダイレクト

--- a/app.yaml
+++ b/app.yaml
@@ -1,29 +1,33 @@
 runtime: php81
 
 handlers:
-  - url: /css
-    static_dir: css
-  - url: /images
-    static_dir: images
+  - url: /css/(.*)
+    static_files: css/\1
+    upload: css/.*
+  - url: /images/(.*)
+    static_files: images/\1
+    upload: images/.*
   - url: /favicon.ico
     static_files: images/favicons/favicon.ico
     upload: images/favicons/favicon.ico
-  - url: /lp-1/assets/css
-    static_dir: lp-1/assets/css
-  - url: /lp-1/assets/img
-    static_dir: lp-1/assets/img
-  - url: /lp-1/assets/js
-    static_dir: lp-1/assets/js
-  - url: /lp-1/assets/scss
-    static_dir: lp-1/assets/scss
+  - url: /lp-1/assets/css/(.*)
+    static_files: lp-1/assets/css/\1
+    upload: lp-1/assets/css/.*
+  - url: /lp-1/assets/js/(.*)
+    static_files: lp-1/assets/js/\1
+    upload: lp-1/assets/js/.*
+  - url: /lp-1/assets/img/(.*)
+    static_files: lp-1/assets/img/\1
+    upload: lp-1/assets/img/.*
+  - url: /lp-1/assets/scss/(.*)
+    static_files: lp-1/assets/scss/\1
+    upload: lp-1/assets/scss/.*
   - url: /lp-1/(.*)
     static_files: lp-1/index.html
     upload: lp-1/index.html
-  - url: /(.*)/
-    static_files: \1/index.html
-    upload: \1/index.html
+  - url: /(.+)
+    static_files: \1
+    upload: .*
   - url: /.*
     static_files: index.html
     upload: index.html
-  - url: /.*
-    script: auto
