app.yamlのバージョンを戻した

--- a/app.yaml
+++ b/app.yaml
@@ -12,12 +12,24 @@ handlers:
   - url: /favicon.ico
     static_files: images/favicons/favicon.ico
     upload: images/favicons/favicon.ico
+  - url: /lp-1/assets/css/(.*)
+    static_files: lp-1/assets/css/\1
+    upload: lp-1/assets/css/.*
+  - url: /lp-1/assets/js/(.*)
+    static_files: lp-1/assets/js/\1
+    upload: lp-1/assets/js/.*
+  - url: /lp-1/assets/img/(.*)
+    static_files: lp-1/assets/img/\1
+    upload: lp-1/assets/img/.*
+  - url: /lp-1/assets/scss/(.*)
+    static_files: lp-1/assets/scss/\1
+    upload: lp-1/assets/scss/.*
   - url: /lp-1/(.*)
-    static_files: lp-1/\1
-    upload: lp-1/.*
-  - url: /lp-1
     static_files: lp-1/index.html
     upload: lp-1/index.html
+  - url: /(.+)
+    static_files: \1
+    upload: .*
   - url: /.*
     static_files: index.html
     upload: index.html
