.htaccessの修正（ローカル開発環境は除外）2

--- a/.htaccess
+++ b/.htaccess
@@ -1,7 +1,9 @@
 RewriteEngine On
 
-# ローカル環境の除外
+# ローカル環境および特定ディレクトリの除外
 RewriteCond %{HTTP_HOST} !^localhost [NC]
 RewriteCond %{HTTP_HOST} !^127.0.0.1 [NC]
+RewriteCond %{REQUEST_URI} !^/taxi-mate/ [NC]
+RewriteCond %{REQUEST_URI} !^/taxi-mate/lp-1 [NC]
 RewriteCond %{HTTP:X-Forwarded-Proto} !https
 RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
