gulpをgit push時に自動実行するコマンドを作成した

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,11 @@
             "email": "nagahama@anytrail.jp"
         }
     ],
-    "require": {}
+    "require": {},
+    "scripts": {
+        "post-install-cmd": [
+            "npm install",
+            "npm run build"
+        ]
+    }
 }
