--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-uglify": "^3.0.2"
   },
   "scripts": {
-    "build": "gulp"
+    "build": "gulp",
+    "heroku-postbuild": "gulp"
   }
 }
