--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "gulp-uglify": "^3.0.2"
   },
   "scripts": {
+    "start": "node index.js",
     "build": "gulp",
     "heroku-postbuild": "gulp deploy"
   }
