Configure Heroku for PHP application

--- a/composer.json
+++ b/composer.json
@@ -1,22 +1,26 @@
 {
-    "name": "yukinagahama/taxi-mate-heroku",
-    "description": "PHP Application for taxi-mate.jp",
-    "autoload": {
-        "psr-4": {
-            "Yukinagahama\\TaxiMateHeroku\\": "src/"
-        }
-    },
-    "authors": [
-        {
-            "name": "YUKI NAGAHAMA",
-            "email": "nagahama@anytrail.jp"
-        }
-    ],
-    "require": {},
-    "scripts": {
-        "post-install-cmd": [
-            "npm install",
-            "npm run build"
-        ]
+  "name": "yukinagahama/taxi-mate-heroku",
+  "description": "PHP Application for taxi-mate.jp",
+  "autoload": {
+    "psr-4": {
+      "Yukinagahama\\TaxiMateHeroku\\": "src/"
     }
+  },
+  "authors": [
+    {
+      "name": "YUKI NAGAHAMA",
+      "email": "nagahama@anytrail.jp"
+    }
+  ],
+  "scripts": {
+    "post-install-cmd": [
+      "npm install",
+      "npm run build"
+    ],
+    "post-update-cmd": [
+      "npm install",
+      "npm run build"
+    ]
+  },
+  "require": {}
 }
