--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "devDependencies": {
     "@eslint/js": "^9.7.0",
     "eslint": "^9.7.0",
+    "eslint-plugin-html": "^8.1.1",
     "globals": "^15.8.0",
     "gulp": "^5.0.0",
     "gulp-clean-css": "^4.3.0",
