--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,15 @@ RewriteRule ^ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
 RewriteCond %{HTTP_HOST} ^www\.taxi-mate\.jp [NC]
 RewriteRule ^(.*)$ https://taxi-mate.jp/$1 [L,R=301]
 
+# 追加: URL構造変更に伴うリダイレクト
+# 最重要: /job/ → /jobs/ のリダイレクト
+RewriteRule ^job/?$ https://taxi-mate.jp/jobs/ [R=301,L]
+RewriteRule ^job/index\.html$ https://taxi-mate.jp/jobs/ [R=301,L]
+
+# 削除されたページ
+RewriteRule ^registration/?$ https://taxi-mate.jp/ [R=301,L]
+RewriteRule ^registration/index\.html$ https://taxi-mate.jp/ [R=301,L]
+
 <IfModule mod_deflate.c>
   AddOutputFilterByType DEFLATE text/html
   AddOutputFilterByType DEFLATE text/css
@@ -20,5 +29,5 @@ RewriteRule ^(.*)$ https://taxi-mate.jp/$1 [L,R=301]
   AddOutputFilterByType DEFLATE application/xml
   AddOutputFilterByType DEFLATE application/xhtml+xml
   AddOutputFilterByType DEFLATE application/rss+xml
-  AddOutputFilterByType DEFLATE application/atom+xml
+  AddOutputFilterByType DEFLATE application/atom_xml
 </IfModule>
